--- a/templates/clients/client_detail.html
+++ b/templates/clients/client_detail.html
@@ -36,11 +36,15 @@
                         <td>{{ client.name }}</td>
                     </tr>
                     <tr>
+                        <th>Client Type:</th>
+                        <td>{{ client.get_client_type_display|default:"Not specified" }}</td>
+                    </tr>
+                    <tr>
                         <th>Contact Person:</th>
                         <td>{{ client.contact_person|default:"Not specified" }}</td>
                     </tr>
                     <tr>
-                        <th>Email:</th>
+                        <th>Primary Email:</th>
                         <td>
                             {% if client.email %}
                                 <a href="mailto:{{ client.email }}">{{ client.email }}</a>
@@ -60,7 +64,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Phone:</th>
+                        <th>Primary Phone:</th>
                         <td>
                             {% if client.phone %}
                                 <a href="tel:{{ client.phone }}">{{ client.phone }}</a>
@@ -80,6 +84,36 @@
                         </td>
                     </tr>
                 </table>
+                
+                {% if emails %}
+                <h5 class="card-title mt-4">Additional Emails</h5>
+                <table class="table table-dark">
+                    {% for email in emails %}
+                    <tr>
+                        <th style="width: 150px;">{{ email.label|default:"Email" }}:</th>
+                        <td>
+                            <a href="mailto:{{ email.email }}">{{ email.email }}</a>
+                            {% if email.is_primary %}<span class="badge bg-info ms-2">Primary</span>{% endif %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                {% endif %}
+                
+                {% if phones %}
+                <h5 class="card-title mt-4">Additional Phone Numbers</h5>
+                <table class="table table-dark">
+                    {% for phone in phones %}
+                    <tr>
+                        <th style="width: 150px;">{{ phone.label|default:"Phone" }}:</th>
+                        <td>
+                            <a href="tel:{{ phone.phone }}">{{ phone.phone }}</a>
+                            {% if phone.is_primary %}<span class="badge bg-info ms-2">Primary</span>{% endif %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                {% endif %}
             </div>
             <div class="col-md-6">
                 <h5 class="card-title">Address</h5>
