--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -25,7 +25,23 @@
                 <table class="table table-dark table-hover">
                     <thead>
                         <tr>
-                            <th>Company Name</th>
+                            <th>
+                                <a href="?sort={% if request.GET.sort == 'company_name' and request.GET.direction != 'desc' %}company_name&direction=desc{% else %}company_name&direction=asc{% endif %}" class="text-info">
+                                    Company Name
+                                    {% if request.GET.sort == 'company_name' %}
+                                        <i class="fas fa-sort-{% if request.GET.direction == 'desc' %}down{% else %}up{% endif %}"></i>
+                                    {% endif %}
+                                </a>
+                            </th>
+                            <th>
+                                <a href="?sort={% if request.GET.sort == 'name' and request.GET.direction != 'desc' %}name&direction=desc{% else %}name&direction=asc{% endif %}" class="text-info">
+                                    Client Name
+                                    {% if request.GET.sort == 'name' %}
+                                        <i class="fas fa-sort-{% if request.GET.direction == 'desc' %}down{% else %}up{% endif %}"></i>
+                                    {% endif %}
+                                </a>
+                            </th>
+                            <th>Client Type</th>
                             <th>Status</th>
                             <th class="text-center">Actions</th>
                         </tr>
@@ -35,8 +51,20 @@
                             <tr>
                                 <td>
                                     <a href="{% url 'client-detail' client.id %}" class="text-info">
-                                        {{ client.company_name|default:client.name }}
+                                        {{ client.company_name|default:"-" }}
                                     </a>
+                                </td>
+                                <td>
+                                    <a href="{% url 'client-detail' client.id %}" class="text-info">
+                                        {{ client.name }}
+                                    </a>
+                                </td>
+                                <td>
+                                    {% if client.client_type %}
+                                        {{ client.get_client_type_display }}
+                                    {% else %}
+                                        <span class="text-muted">Not specified</span>
+                                    {% endif %}
                                 </td>
                                 <td>
                                     {% if client.active %}
